controls/SizeGroup: shield against nullptr qmlContext

Stuff goes dramatically wrong if we try to use a QQmlProperty for
an item that lacks a qmlContext.

BUG: 435593
FIXED-IN: 5.82